objects/Milestone1_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Open_Late_Blocked_Tasks__c</fullName>
        <formula>IF( max( Total_Open_Tasks__c, Total_Late_Tasks__c, Total_Blocked_Tasks__c) &gt; 0,
IMAGE(&quot;http://chart.apis.google.com/chart?chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Open_Tasks__c, Total_Late_Tasks__c, Total_Blocked_Tasks__c)) &amp; &quot;&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Tasks__c/ max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Tasks__c / max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Tasks__c/ max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100) , &quot;Project Status, Open Tasks, Late Tasks &amp; Blocked Tasks&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks  - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete tasks related to child milestones</inlineHelpText>
        <label>Open Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete tasks related to this milestone</inlineHelpText>
        <label>Open Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_vs_Complete_Tasks__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text( Total_Open_Tasks__c )&amp;&quot;,&quot;&amp;Text(Total_Complete_Tasks__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT(Total_Open_Tasks__c) &amp;&quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT(Total_Complete_Tasks__c) &amp;&quot;)&quot;
,&quot;Open vs. Complete Tasks&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Taxing_District_s__c</fullName>
        <label>Other Taxing District(s)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_fees_etc__c</fullName>
        <label>Other (fees, etc.)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPA_Escalation_2__c</fullName>
        <label>PPA Escalation [2]</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPA_Escalation__c</fullName>
        <inlineHelpText>This value is immediately pulled in from the associated Opportunity when the Milestone is first created. However, once the Milestone has been created Users can override this value.</inlineHelpText>
        <label>PPA Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPA_Term_Yrs__c</fullName>
        <label>PPA Term (Yrs)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Degradation_after_Yr_1__c</fullName>
        <defaultValue>0.5</defaultValue>
        <inlineHelpText>Defaults to 0.5%</inlineHelpText>
        <label>Panel Degradation % (after Yr 1)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Panel_Price_per_watt__c</fullName>
        <label>Panel Price (per watt)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Wattage__c</fullName>
        <label>Panel Wattage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
        <label>Parent Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Milestone1_Milestone__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Milestone1_Milestone__c.Parent_Milestone__c</field>
                <operation>equals</operation>
                <value/>
            </filterItems>
            <infoMessage>Parent Milestones must be part of the same project as the child milestone.  Also, Parent Milestone cannot also be a Child Milestone.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Child Milestones</relationshipLabel>
        <relationshipName>Child_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Expenses__c</fullName>
        <label>Partnership Expenses</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Import_Id__c</fullName>
        <label>Predecessor_Milestone_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The milestone which must be complete before you start this one. The Predecessor Milestone end date must be before the current Milestone start date.</inlineHelpText>
        <label>Predecessor Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Milestone1_Milestone__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Successor Milestones</relationshipLabel>
        <relationshipName>Successor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Kickoff_Offset__c</fullName>
        <formula>NULLVALUE(Kickoff__c -  Project__r.Kickoff__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days after project kickoff does this milestone kickoff?</inlineHelpText>
        <label>Project Kickoff Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <label>Project Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Nameplate_Output_MWac__c</fullName>
        <label>Project Nameplate Output (MWac)</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Nameplate_Output_MWdc__c</fullName>
        <label>Project Nameplate Output (MWdc)</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Output_MWh_per_Year__c</fullName>
        <label>Project Output (MWh per Year)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Work_Order__c</fullName>
        <formula>Opportunity__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project/ Work Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The project this milestone is assigned to. If this is a sub-milestone this field is empty.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Subject_to_Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Subject to Sales Tax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <inlineHelpText>Is this pro-active (budgetary or firm), RFI, RFP?</inlineHelpText>
        <label>Proposal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP - Firm</fullName>
                </value>
                <value>
                    <fullName>RFP - Indicative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTO_Region_del1__c</fullName>
        <label>RTO / Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BASN</fullName>
                </value>
                <value>
                    <fullName>CAISO</fullName>
                </value>
                <value>
                    <fullName>CALN</fullName>
                </value>
                <value>
                    <fullName>CALS</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>DSW</fullName>
                </value>
                <value>
                    <fullName>ERCOT</fullName>
                </value>
                <value>
                    <fullName>FRCC</fullName>
                </value>
                <value>
                    <fullName>HECO</fullName>
                </value>
                <value>
                    <fullName>IID (CA)</fullName>
                </value>
                <value>
                    <fullName>ISO-NE (NEPOOL)</fullName>
                </value>
                <value>
                    <fullName>MAPP</fullName>
                </value>
                <value>
                    <fullName>MISO</fullName>
                </value>
                <value>
                    <fullName>NORW</fullName>
                </value>
                <value>
                    <fullName>NYISO</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>ROCK</fullName>
                </value>
                <value>
                    <fullName>SERC-E</fullName>
                </value>
                <value>
                    <fullName>SERC-N</fullName>
                </value>
                <value>
                    <fullName>SERC-SE</fullName>
                </value>
                <value>
                    <fullName>SERC-W</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>WECC</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>AESO</fullName>
                </value>
                <value>
                    <fullName>IESO</fullName>
                </value>
                <value>
                    <fullName>Saks Power</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Notes__c</fullName>
        <inlineHelpText>What is does RES&apos;s relationship look like with this customer? Is it good? Are there any details or concerns we should take into consideration?</inlineHelpText>
        <label>Relationship Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resources_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have the resources to execute when successful?</inlineHelpText>
        <label>Resources Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resources_Explan__c</fullName>
        <inlineHelpText>Provide an Explanation of why we either have, or do not,have the necessary resources needed at the time of execution.</inlineHelpText>
        <label>Resources Explan.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate_State_County_Local__c</fullName>
        <inlineHelpText>(State+County+Local)</inlineHelpText>
        <label>Sales Tax Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selected_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By selecting this checkbox, the following Opportunity Fields will be updated:
PPA Escalation
Size (MW)
Construction Start
Term (Years)
PPA Price
NCF</inlineHelpText>
        <label>Selected Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Prescreen_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If yes, provide link to prescreen.</inlineHelpText>
        <label>Site Prescreen Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Prescreen_URL__c</fullName>
        <label>Site Prescreen URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Size_MWac__c</fullName>
        <inlineHelpText>New</inlineHelpText>
        <label>Size (MWac)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_MWdc__c</fullName>
        <inlineHelpText>This value is immediately pulled in from the associated Opportunity when the Milestone is first created. However, once the Milestone has been created Users can override this value.</inlineHelpText>
        <label>Size (MWdc)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specific_Site_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If yes, provide kmz file</inlineHelpText>
        <label>Specific Site Identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Report Generation</fullName>
                </value>
                <value>
                    <fullName>Operations Layout</fullName>
                </value>
                <value>
                    <fullName>Operations Pricing</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed – Did Not Pursue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Assessed_Taxes__c</fullName>
        <label>State Assessed Taxes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_PPA_Price__c</fullName>
        <label>Target PPA Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <label>Technology Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DR - Reactive</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
                <value>
                    <fullName>Microgrid</fullName>
                </value>
                <value>
                    <fullName>Onshore - Wind</fullName>
                </value>
                <value>
                    <fullName>Solar - Carport</fullName>
                </value>
                <value>
                    <fullName>Solar - Electrical</fullName>
                </value>
                <value>
                    <fullName>Solar - PV</fullName>
                </value>
                <value>
                    <fullName>Solar - Rooftop</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Yrs__c</fullName>
        <inlineHelpText>Length of PPA</inlineHelpText>
        <label>Term (Yrs)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Policy__c</fullName>
        <label>Title Policy (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Expense__c</fullName>
        <formula>Actual_Expense_From_Tasks__c + Actual_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from expense records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Hours__c</fullName>
        <formula>Actual_Hours_From_Tasks__c + Actual_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from time records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Tasks__c</fullName>
        <formula>Blocked_Tasks_in_Tasks__c +  Blocked_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Total Blocked Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Tasks__c</fullName>
        <formula>Complete_Tasks_in_Tasks__c  +  Complete_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Complete Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Expense__c</fullName>
        <formula>Estimated_Expense_From_Tasks__c + Estimated_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <formula>Estimated_Hours_From_Tasks__c + Estimated_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Balance__c</fullName>
        <formula>Total_Estimated_Expense__c - Total_Actual_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated expense - total actual expense</inlineHelpText>
        <label>Total Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <formula>Expense_Budget__c +  Expense_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as expense budget + expense budget from sub milestones</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Balance__c</fullName>
        <formula>Total_Estimated_Hours__c - Total_Actual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated hours - total actual hours</inlineHelpText>
        <label>Total Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <formula>Hours_Budget__c + Hours_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as hours budget + hours budget from sub milestones</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Tasks__c</fullName>
        <formula>Late_Tasks_in_Tasks_2__c + Late_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Late Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Tasks__c</fullName>
        <formula>Open_Tasks_in_Tasks__c + Open_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Off_Taker__c</fullName>
        <label>Type of Off-Taker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Hedge Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unusual_Terms_or_Requirements__c</fullName>
        <inlineHelpText>Are there any unusual terms or requirements known? 

For example, provisions affecting financing,  consequential damages, unlimited liabilities, onerous warranty period, performance guarantees, economic development, achievable COD timeline</inlineHelpText>
        <label>Unusual Terms / Requirements?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Valid_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Opportunity in an approved market (region, customer type, project overview)?</inlineHelpText>
        <label>Valid Market?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_is_bringing_the_land__c</fullName>
        <label>Who is bringing the land?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kWh_kwp__c</fullName>
        <formula>Project_Output_MWh_per_Year__c /  Project_Nameplate_Output_MWdc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kWh/kwp</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Panels__c</fullName>
        <label># of Panels</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Total_CapEx_Eligible_for_ITC__c</fullName>
        <label>% of Total CapEx Eligible for ITC</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Distributed_Pricing_Request</fullName>
        <active>true</active>
        <label>Distributed Pricing Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributed_Pricing_Request_Final</fullName>
        <active>true</active>
        <label>Distributed Pricing Request Final</label>
    </recordTypes>
    <recordTypes>
        <fullName>Go_No_Go</fullName>
        <active>true</active>
        <label>Go/No Go</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_RFP_Support</fullName>
        <active>true</active>
        <label>Legal RFP Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Storage_Study</fullName>
        <active>true</active>
        <label>Storage Study</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alias_must_not_contain_spaces</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(TRIM(Alias__c ),&quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Alias__c</errorDisplayField>
        <errorMessage>The Milestone Alias cannot contain spaces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CanNotAddSubmilestoneToParentCompleted</fullName>
        <active>true</active>
        <errorConditionFormula>Parent_Milestone__r.Complete__c</errorConditionFormula>
        <errorDisplayField>Parent_Milestone__c</errorDisplayField>
        <errorMessage>You can not add milestones to parent milestones with status completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotBeCompleteWithOpenTasks</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Complete__c == true, 
Total_Open_Tasks__c &gt; 0,
NOT(ISPICKVAL(Stage__c,&quot;Closed – Did Not Pursue&quot;))
)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>You cannot mark a milestone as Complete if it has Open Tasks...
However, if for some reason we decided to cancel this workflow mid-process, please go to the Milestone&apos;s Stage field and select &quot;Closed – Did Not Pursue&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deadline_within_project_boundaries</fullName>
        <active>false</active>
        <errorConditionFormula>if ( and (Deadline__c &lt;&gt; null, Project__r.Deadline__c &lt;&gt;  null, Deadline__c &gt; Project__r.Deadline__c) , true, false)</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>Deadline must be less than or equal to the project deadline.</errorMessage>
    </validationRules>
</CustomObject>